Repair the notification color which was visible on (document).ready

--- a/src/static/css/form.css
+++ b/src/static/css/form.css
@@ -140,7 +140,7 @@ Apply notifications Div
   position:relative;
   padding:10px;
   background-color:white;
-  color:red;
+  color:transparent;
   text-decoration:none;
 }
 
